--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
-    "twitter-api-client": "^1.4.0"
+    "twitter-api-client": "^1.4.0",
+    "forever": "^4.0.1"
   }
 }
